FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Scrum_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>agf__Allocation__c</fullName>
        <label>Allocation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__External_Email__c</fullName>
        <label>External Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Group_ID__c</fullName>
        <formula>agf__Scrum_Team__r.agf__Team_Email_Group_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Internal_Email__c</fullName>
        <formula>agf__Member_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Member_Name_Formula__c</fullName>
        <formula>IF ( OR ( $RecordType.Name = &apos;Internal&apos;, $RecordType.Name = &apos;&apos; ), agf__Member_Name__r.FirstName &amp; &apos; &apos; &amp; agf__Member_Name__r.LastName,
IF ( $RecordType.Name = &apos;External&apos;, &apos;(External) &apos; , &apos;(Planned)&apos; ) &amp; agf__Member_Name_Text__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Member_Name_Text__c</fullName>
        <label>Member Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scrum_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Record_Type_Copy__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Record Type Copy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Req_Code__c</fullName>
        <label>Req. Code</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>BSA</fullName>
                </value>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>Capacity Planner</fullName>
                </value>
                <value>
                    <fullName>Data Center Engineer</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Dev Manager</fullName>
                </value>
                <value>
                    <fullName>Doc Editor</fullName>
                </value>
                <value>
                    <fullName>Doc Manager</fullName>
                </value>
                <value>
                    <fullName>Engineering Manager</fullName>
                </value>
                <value>
                    <fullName>Network Engineer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performance Engineer</fullName>
                </value>
                <value>
                    <fullName>Product Owner</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Provisioning Specialist / Asset Manager</fullName>
                </value>
                <value>
                    <fullName>QA Engineer</fullName>
                </value>
                <value>
                    <fullName>QA Manager</fullName>
                </value>
                <value>
                    <fullName>Release Engineer</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Security Engineer</fullName>
                </value>
                <value>
                    <fullName>Site Reliability Engineer</fullName>
                </value>
                <value>
                    <fullName>Software Engineer</fullName>
                </value>
                <value>
                    <fullName>SysAdmin</fullName>
                </value>
                <value>
                    <fullName>SysAdmin Linux</fullName>
                </value>
                <value>
                    <fullName>SysAdmin Storage</fullName>
                </value>
                <value>
                    <fullName>SysAdmin Win</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team_Name__c</fullName>
        <formula>agf__Scrum_Team__r.Name</formula>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Scrum_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__formula_email__c</fullName>
        <formula>IF(  ISNULL(agf__External_Email__c), IF( ISNULL(agf__Internal_Email__c), &apos;&apos;,agf__Internal_Email__c), agf__External_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <label>Team Member</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>agf__Member_Name__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>agf__Record_Type_Copy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STM-{00000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <recordTypes>
        <fullName>agf__External</fullName>
        <active>true</active>
        <description>Employee from outside SFDC</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Internal</fullName>
        <active>true</active>
        <description>SFDC Employee</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Planned</fullName>
        <active>true</active>
        <description>Planned head count</description>
        <label>Planned</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Allocate_over_limit</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Allocation__c &gt; 1.00</errorConditionFormula>
        <errorDisplayField>agf__Allocation__c</errorDisplayField>
        <errorMessage>Allocation percent should not exceed 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Allocation_above_0</fullName>
        <active>true</active>
        <description>Allocation should not be below zero</description>
        <errorConditionFormula>agf__Allocation__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>agf__Allocation__c</errorDisplayField>
        <errorMessage>Allocation should not be a negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Allocation_cant_exceed_100</fullName>
        <active>true</active>
        <description>Allocation should not exceed 100%</description>
        <errorConditionFormula>agf__Allocation__c  &gt; 100</errorConditionFormula>
        <errorDisplayField>agf__Allocation__c</errorDisplayField>
        <errorMessage>Allocation should not exceed 100%</errorMessage>
    </validationRules>
</CustomObject>